Fix ahbr.md and add cvhockey.md with pdfs

--- a/public/projects/portfolio/index.html
+++ b/public/projects/portfolio/index.html
@@ -141,7 +141,7 @@
     <span class="sr-only">Link to heading</span>
   </a>
 </h1>
-<p><img src="/images/posts/resurgam.png" alt="Resurgam"></p>
+<p><a href="https://github.com/ConnorMcKinley/portfolio-website"  class="external-link" target="_blank" rel="noopener">https://github.com/ConnorMcKinley/portfolio-website</a></p>
 
   </article>
 </section>
