--- a/public/projects/ppi/index.html
+++ b/public/projects/ppi/index.html
@@ -141,7 +141,9 @@
     <span class="sr-only">Link to heading</span>
   </a>
 </h1>
-<p><img src="/images/posts/ppi.png" alt="Python Package Index"></p>
+<p><img src="/images/posts/ppi1.png" alt="Python Package Index">
+<img src="/images/posts/ppi2.png" alt="Python Package Index">
+<img src="/images/posts/ppi3.png" alt="Python Package Index"></p>
 
   </article>
 </section>
