--- a/public/projects/csesim/index.html
+++ b/public/projects/csesim/index.html
@@ -136,7 +136,7 @@
 
     
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="https://www.youtube.com/embed/https://youtu.be/3n8VQ9je4Qo" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+  <iframe src="https://www.youtube.com/embed/l6w1Njkm0nU?si=elC3I7KJAlNy7Lk3" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 
 
