--- a/public/projects/cosmic-collision/index.html
+++ b/public/projects/cosmic-collision/index.html
@@ -141,7 +141,11 @@
     <span class="sr-only">Link to heading</span>
   </a>
 </h1>
-<p><img src="/images/posts/cosmic-collision.png" alt="Cosmic Collision"></p>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/1AFehRI7KZI?si=2CcFO7e5d0lsQ4AE" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
 
   </article>
 </section>
