--- a/public/projects/resurgam/index.html
+++ b/public/projects/resurgam/index.html
@@ -141,7 +141,21 @@
     <span class="sr-only">Link to heading</span>
   </a>
 </h1>
-<p><img src="/images/posts/resurgam.png" alt="Resurgam"></p>
+<p>
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/d3pVQMKV0UE?si=8H2uBIdIOyabE_24" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/gF7ehiSSdRs?si=XtB_6D553Bl51_bJ" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/JYhlFpmlRq4?si=uaarf41VU-Unxc3p" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+</p>
 
   </article>
 </section>
