Add content to all posts. Add figma post and embed

--- a/public/projects/cosmic-collision/index.html
+++ b/public/projects/cosmic-collision/index.html
@@ -134,13 +134,9 @@
       </h1>
     </header>
 
-    <h1 id="wip">
-  WIP
-  <a class="heading-link" href="#wip">
-    <i class="fa fa-link" aria-hidden="true" title="Link to heading"></i>
-    <span class="sr-only">Link to heading</span>
-  </a>
-</h1>
+    <p>In my journey through game development, I took my first stride with &ldquo;Cosmic Collision,&rdquo; a puzzle game developed during my High School Game Design course. This game, my inaugural attempt using Unity, immerses players in a sci-fi environment where they utilize gravity to annihilate enemy planets, offering a variety of challenges and intriguing gameplay mechanics.</p>
+<p>Cosmic Collision served as a creative canvas where I designed numerous game assets, delving into the basics of models, textures, and shaders, laying down the foundational blocks of my understanding of game development. The creation of each asset was a step towards mastering the details of game design, enriching my knowledge and shaping my skills in Unity.</p>
+<p>This venture was more than just a class project; it was the genesis of my exploration into game development, a practical endeavor where I could combine creativity with technology, learning the nuances of Unity and game design. Cosmic Collision was a stepping stone, enhancing my grasp on game development basics and fueling my passion to create more immersive and innovative gaming experiences.</p>
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe src="https://www.youtube.com/embed/1AFehRI7KZI?si=2CcFO7e5d0lsQ4AE" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
