--- a/public/projects/cvhockey/index.html
+++ b/public/projects/cvhockey/index.html
@@ -134,13 +134,8 @@
       </h1>
     </header>
 
-    <h1 id="wip">
-  WIP
-  <a class="heading-link" href="#wip">
-    <i class="fa fa-link" aria-hidden="true" title="Link to heading"></i>
-    <span class="sr-only">Link to heading</span>
-  </a>
-</h1>
+    <p>To address the difficulties viewers face in tracking the puck during a streamed hockey game, our team undertook a pioneering project to enhance hockey broadcasts. The motivation was to simplify the viewing experience, allowing a broader audience to enjoy the sport.</p>
+<p>We exploited advanced object detection techniques and implemented the Ultralytics YOLOv8 Convolutional Neural Network model, trained on 200 manually labeled hockey game images from Youtube. This approach enabled us to accurately track the puck&rsquo;s motion and superimpose a trail and bounding box on the live broadcast in real time, offering a seamless and enhanced viewing experience.</p>
 <style>
   .pdf-container {
     position: relative;
