--- a/public/projects/portfolio/index.html
+++ b/public/projects/portfolio/index.html
@@ -134,13 +134,8 @@
       </h1>
     </header>
 
-    <h1 id="wip">
-  WIP
-  <a class="heading-link" href="#wip">
-    <i class="fa fa-link" aria-hidden="true" title="Link to heading"></i>
-    <span class="sr-only">Link to heading</span>
-  </a>
-</h1>
+    <p>By utilizing AWS services, I was able to create a serverless portfolio website. The website is hosted on S3, and the domain is managed by Route 53. The website is built using Hugo, and the content is written in Markdown. The website is deployed using GitHub Actions, and the content is stored in a GitHub repository.</p>
+<p>The result is a website that is easy to maintain and update. The website is also easily scalable, and can handle large amounts of traffic.</p>
 <p><a href="https://github.com/ConnorMcKinley/portfolio-website"  class="external-link" target="_blank" rel="noopener">https://github.com/ConnorMcKinley/portfolio-website</a></p>
 
   </article>
