--- a/public/projects/ahbr/index.html
+++ b/public/projects/ahbr/index.html
@@ -134,13 +134,8 @@
       </h1>
     </header>
 
-    <h1 id="wip">
-  WIP
-  <a class="heading-link" href="#wip">
-    <i class="fa fa-link" aria-hidden="true" title="Link to heading"></i>
-    <span class="sr-only">Link to heading</span>
-  </a>
-</h1>
+    <p>Amidst the ongoing global health crisis brought on by the coronavirus pandemic, hospitals worldwide are grappling with a significant shortage of nursing staff. In this critical juncture, my team initiated the development of a robotic solution, aiming to optimize hospital workflows and alleviate the burden on nursing staff by automating routine tasks.</p>
+<p>I was responsible for implementing the line tracing algorithm that empowers the BedBot to navigate seamlessly through the hospital corridors. The line following capability is facilitated by three infrared (IR) sensors, strategically positioned to detect the ground surrounding the guiding black line, enabling the robot to make precise corrective turns to maintain its designated path.</p>
 <style>
   .pdf-container {
     position: relative;
