--- a/public/projects/awsdemo/index.html
+++ b/public/projects/awsdemo/index.html
@@ -134,7 +134,8 @@
       </h1>
     </header>
 
-    
+    <p>After my time working as a cloud engineer, I set out to create a beginner-friendly video demo to show how to host a static website using AWS. This project was all about breaking down the process into simple, understandable steps, making AWS technology approachable for everyone, even those new to it. By producing this easy-to-follow introductory video, I hoped to bridge the gap between complex hosting solutions and beginners looking to learn and understand the technology.</p>
+
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe src="https://www.youtube.com/embed/3n8VQ9je4Qo?si=rj33dko1WqTYirNe" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
