--- a/public/projects/pandas/index.html
+++ b/public/projects/pandas/index.html
@@ -134,13 +134,9 @@
       </h1>
     </header>
 
-    <h1 id="wip">
-  WIP
-  <a class="heading-link" href="#wip">
-    <i class="fa fa-link" aria-hidden="true" title="Link to heading"></i>
-    <span class="sr-only">Link to heading</span>
-  </a>
-</h1>
+    <p>I had the opportunity to contribute to the renowned open-source data analysis library, Pandas, by adding test cases to its codebase.</p>
+<p>My contribution involved developing test cases designed to validate the functionality and reliability of various functions within the library. These test cases are essential for maintaining the integrity of the software, allowing for the identification and resolution of potential issues and ensuring the continual refinement of the library’s capabilities.</p>
+<p>This experience was not only enriching but also allowed me to play a role in the ongoing enhancement of one of the most pivotal tools in data analysis, thus supporting the broader community of developers and data analysts in their diverse and innovative endeavors.</p>
 <p><a href="https://github.com/pandas-dev/pandas/pull/52772"  class="external-link" target="_blank" rel="noopener">https://github.com/pandas-dev/pandas/pull/52772</a></p>
 
   </article>
