--- a/public/projects/ppi/index.html
+++ b/public/projects/ppi/index.html
@@ -137,8 +137,8 @@
     <p>While at Amway, I spearheaded the development of a Python Package Index hosted on AWS infrastructure, aimed at fostering collaboration between various cloud teams. This initiative was crucial in providing a centralized platform for efficient package management and sharing, thereby optimizing workflow and enhancing overall productivity among the teams.</p>
 <p>I utilized AWS CloudFormation to facilitate a streamlined deployment processes as well as version control. These enhancements were pivotal in maintaining consistency and reliability within the cloud environments, allowing for a more integrated and coordinated approach to cloud-based project development.</p>
 <p><img src="/images/posts/ppi1.png" alt="Python Package Index">
-<img src="/images/posts/ppi2.png" alt="Python Package Index">
-<img src="/images/posts/ppi3.png" alt="Python Package Index"></p>
+<img src="/images/posts/ppi2.jpg" alt="Python Package Index">
+<img src="/images/posts/ppi3.jpg" alt="Python Package Index"></p>
 
   </article>
 </section>
