Finish Figma post

--- a/public/projects/awsdemo/index.html
+++ b/public/projects/awsdemo/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-  [Cloud] AWS static website demo · ConnorMcKinley
+  [Cloud] AWS Static Website Demo · ConnorMcKinley
 </title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,10 +17,10 @@
 <meta name="keywords" content="blog,developer,personal">
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="[Cloud] AWS static website demo"/>
+<meta name="twitter:title" content="[Cloud] AWS Static Website Demo"/>
 <meta name="twitter:description" content="Documentation of AWS static website demo"/>
 
-<meta property="og:title" content="[Cloud] AWS static website demo" />
+<meta property="og:title" content="[Cloud] AWS Static Website Demo" />
 <meta property="og:description" content="Documentation of AWS static website demo" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://www.connormckinley.com/projects/awsdemo/" /><meta property="article:section" content="projects" />
@@ -129,7 +129,7 @@
     <header>
       <h1 class="title">
         <a class="title-link" href="https://www.connormckinley.com/projects/awsdemo/">
-          [Cloud] AWS static website demo
+          [Cloud] AWS Static Website Demo
         </a>
       </h1>
     </header>
