--- a/public/projects/figma/index.html
+++ b/public/projects/figma/index.html
@@ -134,15 +134,10 @@
       </h1>
     </header>
 
-    <h1 id="figma-prototypes-post-is-wip">
-  Figma Prototypes (Post is WIP)
-  <a class="heading-link" href="#figma-prototypes-post-is-wip">
-    <i class="fa fa-link" aria-hidden="true" title="Link to heading"></i>
-    <span class="sr-only">Link to heading</span>
-  </a>
-</h1>
+    <p>By utilizing Figma, I created a Figma prototype for an app designed to encourage students to explore the campus more extensively. This app assigns quests to students, directing them to visit specific landmarks, thus promoting exploration and interaction with the campus environment.</p>
 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&amp;url=https%3A%2F%2Fwww.figma.com%2Fproto%2FE5gETc1vyy4eSE7K7SZa5A%2FEECS-493-A4%3Ftype%3Ddesign%26node-id%3D2-4%26t%3DR1a0aIwIhPMOWVej-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D2%253A4%26mode%3Ddesign" allowfullscreen></iframe>
 
+<p>Later on, I was given the opportunity to collaborate with other students and design a prototype for a user-centric application focused on aiding students in exploring and determining their career pathways. The design emphasized intuitive navigation and user-friendly interfaces, ensuring the application is accessible and helpful to students in making informed career decisions. In essence, this Figma prototype represents a convergence of thoughtful design and practical utility, aimed at simplifying career exploration for students</p>
 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&amp;url=https%3A%2F%2Fwww.figma.com%2Fproto%2FPE04vwzdo1E1fK5WDXc5S1%2FEECS-493-M4-%28Copy-of-M3%29%3Fnode-id%3D2-3%26starting-point-node-id%3D2%253A3%26mode%3Ddesign%26t%3DOGrEZt9ywpiygA7h-1" allowfullscreen></iframe>
 
 
