Update cse simulator video

--- a/public/projects/csesim/index.html
+++ b/public/projects/csesim/index.html
@@ -139,10 +139,10 @@
 <p>In short, the CSE Simulator is a fun, interactive way to look back at a piece of our university’s history, offering a virtual walk down memory lane for those who had experiences in the actual computer lab.</p>
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="https://www.youtube.com/embed/l6w1Njkm0nU?si=elC3I7KJAlNy7Lk3" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+  <iframe src="https://www.youtube.com/embed/AHt1CYhPwSk?si=DtKbNoKh2gUszhzk" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 
-
+<pre tabindex="0"><code></code></pre>
   </article>
 </section>
 
