Make Unreal Engine bold

--- a/public/projects/csesim/index.html
+++ b/public/projects/csesim/index.html
@@ -134,7 +134,7 @@
       </h1>
     </header>
 
-    <p>Embarking on a journey to blend nostalgia with technology, I leveraged the power of Unreal Engine to craft a virtual reality experience, the &ldquo;CSE Simulator.&rdquo; This project creates a virtual version of our university&rsquo;s computer lab that was set to be shut down, keeping its memory alive. The simulator lets users explore and interact with the lab as if they were really there, making it a digital memory for everyone who spent time in it.</p>
+    <p>Embarking on a journey to blend nostalgia with technology, I leveraged the power of <strong>Unreal Engine</strong> to craft a virtual reality experience, the &ldquo;CSE Simulator.&rdquo; This project creates a virtual version of our university&rsquo;s computer lab that was set to be shut down, keeping its memory alive. The simulator lets users explore and interact with the lab as if they were really there, making it a digital memory for everyone who spent time in it.</p>
 <p>The goal was to make a simple, interactive replica that holds all the charm and nostalgia of the real lab, so users can feel connected to it and remember the good times they had.</p>
 <p>In short, the CSE Simulator is a fun, interactive way to look back at a piece of our university’s history, offering a virtual walk down memory lane for those who had experiences in the actual computer lab.</p>
 
